[FIX] - Fix building

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,9 @@
   ],
   "compilerOptions": {
     "paths": {
-      "@/*": ["src/*"],
-      "@components/*": ["src/components/*"],
-      "@assets/*": ["src/assets/*"]
+      "@/*": ["./src/*"],
+      "@components/*": ["./src/components/*"],
+      "@assets/*": ["./src/assets/*"]
     }
   },
-  "include": ["src"],
 }
